--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.5.2",
+    "@vee-validate/rules": "^4.5.2",
     "core-js": "^3.6.5",
+    "vee-validate": "^4.5.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
