--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
     "fastify": "^3.22.0",
     "fastify-env": "^2.1.1",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.8.0",
     "uuidv4": "^6.2.12",
-    "vue": "^3.0.0"
+    "vee-validate": "^4.5.2",
+    "vue": "^3.0.0",
+    "vue-axios": "^3.3.7",
+    "vue-i18n": "^9.2.0-beta.11",
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
